# HeatEq2D

./: BoundingRect.cpp  BoundingRect.h  CMakeLists.txt  Domain.cpp  Domain.h  MyTypedefs.h  Solver.cpp  Solver.h  Untitled-1.nb  heat.nb  main.cpp
